cmake_minimum_required(VERSION 2.8)
project( DisplayImage )
find_package( OpenCV REQUIRED )
include_directories( ${OpenCV_INCLUDE_DIRS} )
set( CMAKE_CXX_FLAGS "-O2" )
set( CMAKE_CXX_FLAGS "-std=c++11" )
add_executable( runner main.cpp StereoMatching.hpp )
target_link_libraries( runner ${OpenCV_LIBS} )